tests/integration/pilot/test_artifacts/pilot-058a94968f114a619ba739812/TestTraffic/virtualservice/set_host_header_in_route_and_multi_destination/a/to_tproxy/_test_context/VirtualService.3099549436.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default
  namespace: echo-2-98059
spec:
  hosts:
  - tproxy
  http:
  - headers:
      request:
        set:
          :authority: route-authority
    route:
    - destination:
        host: tproxy
      headers:
        request:
          set:
            Host: dest-authority
      weight: 50
    - destination:
        host: tproxy
      weight: 50
